# core

./: Cargo.toml  README.md  flake.nix
.github/workflows/: bench.yml  ci.yml  review.yml
benches/: bench.rs
docs/: Concepts.md
src/: action.rs  filter.rs  generator.rs  launcher.rs  lib.rs  sorter.rs  source.rs  ui.rs
src/launcher/: batcher.rs
tests/: dummyui.rs  filter.rs  source.rs
