[package]
name = "ltrait"
version = "0.7.0"
edition = "2024"
description = "Yet Another Fuzzy Finder (Builder) for OS Wide, inspired from vim-fall and ddu.vim (and xmonad)"

authors = ["satler <satler@satler.dev>"]

documentation = "https://docs.rs/ltrait/"
homepage = "https://crates.io/crates/ltrait"
repository = "https://github.com/ltrait/core"

exclude = [".envrc"]

license = "MIT"

[dependencies]
async-trait = "0.1.86"
color-eyre = "0.6.3"
futures = "0.3.31"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }

[dev-dependencies]
async-stream = "0.3.6"
tokio = { version = "1.43.0", features = ["full"] }
criterion = { version = "0.5.1", features = ["async", "tokio", "async_tokio"] }

[[bench]]
name = "bench"
harness = false
