[package]
name = "ltrait"
version = "0.8.3"
edition = "2024"
description = "Yet Another Fuzzy Finder (Builder) for OS Wide, inspired from vim-fall and ddu.vim (and xmonad)"

authors = ["satler <satler@satler.dev>"]

documentation = "https://docs.rs/ltrait/"
homepage = "https://crates.io/crates/ltrait"
repository = "https://github.com/ltrait/core"

exclude = [".envrc"]

license = "MIT"

[dependencies]
async-trait = "0.1.86"
color-eyre = "0.6.3"
dirs = "6.0.0"
futures = "0.3.31"
tokio-stream = "0.1.17"

tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.3", optional = true }
tracing-subscriber = { version = "0.3.19", features = [
  "local-time",
], optional = true }

[dev-dependencies]
async-stream = "0.3.6"
tokio = { version = "1.43.0", features = ["full"] }
criterion = { version = "2.9.1", package = "codspeed-criterion-compat", features = [
  "async",
  "async_tokio",
  "tokio",
] }

[features]
default = ["log"]
log = ["dep:tracing-appender", "dep:tracing-subscriber"]

[[bench]]
name = "bench"
harness = false
